[product-catalogs] rework API design
